Fix overflow for code blocks

--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -1,4 +1,4 @@
-.highlight pre { background-color: #272822; }
+.highlight pre { background-color: #272822; overflow: auto; }
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
